# hackathon-team-4

./: .gitignore  README.md
.devcontainer/: devcontainer.json
docs/: workshop.md
infra/: foundry_models.tf  roles.tf  variables.tf
solutions/: lab_8.py
src/: .env.template  app.py  lab_5.py  lab_6.py  lab_7.py  main.py  pyproject.toml
src/agents/: browser_agent.py  decision_tree_agent.py  rating_table_agent.py  risk_analyzer_agent.py  search_agent.py  search_prompt_agent.py  visualizer_agent.py  workflow_agents.py
src/models/: workflow_schemas.py
src/output/: decision_tree_Asthma.html  diagram_Asthma.html  rating_table_Asthma.html
src/tools/: browser_tools.py
src/utils/: browser_helper.py
